# JRPG

./: CMakeLists.txt
include/: Conf.h  UserDataManipulation.h
include/GameMechanics/: GameObjects.h
include/UI/: UI.h
src/: Main.c  ReadConf.c  UserDataManipulation.c
src/UI/: UI.c
